expose `failedItemLimit` setting

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,6 +2,7 @@
 grails:
     jesque:
         enabled: true
+        failedItemLimit: 1000
         pruneWorkersOnStartup: true
         createWorkersOnStartup: true
         schedulerThreadActive: true
