--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 	provided 'javax.servlet:javax.servlet-api:3.1.0'
 
 	compile('org.grails.plugins:redis:2.0.4')
-	compile('net.greghaines:jesque:2.1.2')
+	compile('net.greghaines:jesque:2.1.4-UBERALL')
 	compile('redis.clients:jedis:2.9.0')
 	compile('joda-time:joda-time:2.5')
 
